# PE-Library

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  PE-Library.slnx  README.md
PE-Fuzzer/: .gitignore  PE-Fuzzer.vcxproj  PE-Fuzzer.vcxproj.filters  README.md  build-all.cmd  build-linux.sh  fuzzer.cpp  main.cpp  make_seed.py  pe-fuzzer.dict
PE-Fuzzer/targets/: common.hpp  fuzz_debug.cpp  fuzz_exports.cpp  fuzz_image.cpp  fuzz_imports.cpp  fuzz_relocations.cpp  fuzz_resources.cpp  fuzz_rich.cpp  fuzz_sections.cpp  fuzz_tls.cpp  fuzz_utils.cpp
PE-Library/: CMakeLists.txt  LICENSE.txt  PE-Library.slnx  PE-Library.vcxproj  PE-Library.vcxproj.filters  README.md  example.cpp  pe-lib.vcxproj  pe-lib.vcxproj.filters
PE-Library/SDK/: PE.cpp  PE.hpp  defs.hpp
PE-Library/SDK/dos-header/: dos-header.cpp  dos-header.hpp
PE-Library/SDK/nt-headers/directories/: dir.cpp  dir.hpp
PE-Library/SDK/nt-headers/headers/: headers.cpp  headers.hpp
PE-Library/SDK/nt-headers/sections/: sections.cpp  sections.hpp
PE-Library/pe-lib/: defs.hpp  directories.hpp  directories_impl.cpp  image.hpp  image_impl.cpp  pe_platform.hpp  rich.hpp  rich_impl.cpp  sections.hpp  sections_impl.cpp
PE-Library/premier/: PE.cpp  PE.hpp  defs.hpp  directories.hpp  directories_impl.cpp  image.hpp  image_impl.cpp  rich.hpp  rich_impl.cpp  sections.hpp  sections_impl.cpp
docs/: Directories.md  Image.md  Imports & Exports.md  README.md  Section & Rich.md
